# study

./: README.md
clion/struct/: CMakeLists.txt  isomorphism.c  polynomial.c  polynomial.cpp  reversingLink.c  subsequence.cpp
